--- a/UniMeet/styles/main.css
+++ b/UniMeet/styles/main.css
@@ -18,9 +18,8 @@ html, body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
 }
 
-media (min-width: 840px)
 .mdl-cell--6-col, .mdl-cell--6-col-desktop.mdl-cell--6-col-desktop {
-    width: 100% !important;
+    width: calc(100%) !important;
 }
 
 .mdl-color--light-blue-700 {
