--- a/UniMeet/public/styles/matching.css
+++ b/UniMeet/public/styles/matching.css
@@ -22,9 +22,9 @@
 	background-color: #FFFFFF;
 	border-radius: 32px;
 	width: 100%;
-	-webkit-box-shadow: 0px 16px 32px rgba(0,0,0,0.20);
-	box-shadow: 0px 16px 32px rgba(0,0,0,0.20);
-	padding: 16px;
+	-webkit-box-shadow: 0px 0px 32px rgba(0,0,0,0.20);
+	box-shadow: 0px 0px 32px rgba(0,0,0,0.20);
+	padding: 32px;
 	margin: 0px 0px 32px 0px;
 	float: left;
 }
@@ -34,7 +34,7 @@
 }
 
 .profile_name_title {
-	padding-top: 16px;
+	padding-top: 32px;
 	color: #000000;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: bold;
@@ -56,7 +56,7 @@
 }
 
 .shortcut_container {
-	padding: 16px;
+	padding: 0px 16px;
 }
 
 
