--- a/UniMeet/public/styles/navigation.css
+++ b/UniMeet/public/styles/navigation.css
@@ -1,6 +1,30 @@
 @charset "UTF-8";
 /* CSS Document */
 
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+}
+
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+    background-color: #555;
+    color: white;
+}
+
+
+/*
 .nav_profile_image {
 	display:  block;
 	margin-left: auto;
@@ -10,17 +34,19 @@
 	border-radius: 50%;
 }
 
+
 ul {
-    list-style-type: none;
+	margin: 16px 0px;
+	text-align: center;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: normal;
+	font-size: 16px;
 }
 
-li a {
-    display: block;
-}
 
 .nav_profile_title {
 	margin: 32px 0px;
-	color: white;
+	color: red;
 	text-align: center;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: normal;
@@ -29,8 +55,7 @@ li a {
 
 .nav_menu_items {
 	margin: 16px 0px;
-	color: white;
-/*	text-align: center;*/
+	text-align: center;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: normal;
 	font-size: 16px;
@@ -43,4 +68,4 @@ li a {
 		
 	margin-left: auto;
 	margin-right: auto;
-}
+}*/
