--- a/UniMeet/public/styles/login.css
+++ b/UniMeet/public/styles/login.css
@@ -12,6 +12,16 @@ body {
 	float: left;
 }
 
+.header_image {
+	width: 100%;
+    height: 100%;
+	opacity: 0.2;
+    background-image: url('http://barbihoneycutt.com/wp-content/uploads/2013/01/iStock_000037691018Small.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
 .login_panel {
 	position: relative;
 	width: 40vw;
@@ -28,9 +38,18 @@ body {
 }
 
 .logo {
-	position: relative;
 	width: 100px;
-	height: 100px;
+	height: auto;
+	margin: 0px 15% 16px 15%;
+}
+
+.uniMeet_title {
+	width: 70%;
+    margin: 0px 15% 8px 15%;
+	text-align: left;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: bold;
+	font-size: 16px;
 }
 
 .login_title {
@@ -65,6 +84,7 @@ body {
 	margin: 0px 15% 16px 15%;
 	border-radius: 21px;
 	background-color: rgba(123,109,238,1);
+	border: 0px solid transparent;
 	color: white;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: normal;
@@ -81,6 +101,24 @@ body {
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: normal;
 	font-size: 16px;
+}
+
+
+
+.form_signup_btn {
+	
+	position: absolute;
+	bottom: 8px;
+	left: 50%;
+  transform: translateX(-50%);
+	
+	height: 42px;
+	background-color: transparent;
+	border: 0px solid transparent;
+	color: rgba(0,0,0,0.5);
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: normal;
+	font-size: 12px;
 }
 
 
