--- a/UniMeet/public/styles/matching.css
+++ b/UniMeet/public/styles/matching.css
@@ -27,6 +27,13 @@
 	padding: 32px;
 	margin: 0px 0px 32px 0px;
 	float: left;
+	transition: 0.5s;
+}
+
+.matched_profile_card:hover {
+	-webkit-box-shadow: 0px 0px 32px rgba(0,0,0,0.20);
+	box-shadow: 0px 0px 32px rgba(123,109,238,1);
+	cursor: pointer;
 }
 
 .profile_image {
