Password validation, warning messages and redirect on new user sign up

--- a/UniMeet/public/styles/login.css
+++ b/UniMeet/public/styles/login.css
@@ -98,7 +98,15 @@ body {
 	font-size: 16px;
 }
 
-
+.warning {
+	width: 70%;
+    margin: 0px 15% 16px 15%;
+    text-align: left;
+    color: red;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: normal;
+	font-size: 16px;
+}
 
 .form_signup_btn {
 	
