--- a/UniMeet/public/styles/login.css
+++ b/UniMeet/public/styles/login.css
@@ -85,6 +85,7 @@ body {
 }
 
 .form_login_btn:hover {
+	cursor: pointer;
 	background-color: rgb(118, 102, 237, 1);
 }
 
@@ -104,6 +105,10 @@ body {
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: normal;
 	font-size: 16px;
+}
+
+.form_login_google_btn:active {
+	cursor: pointer;
 }
 
 .warning {
