--- a/UniMeet/public/styles/login.css
+++ b/UniMeet/public/styles/login.css
@@ -68,7 +68,11 @@ body {
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: normal;
 	font-size: 16px;
-	
+}
+
+.form_field:focus {
+	-webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25); 
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
 }
 
 .form_login_btn {
@@ -93,6 +97,14 @@ body {
 	background:#eb3b60;
 	transform:translateY(1px);
 	background-color: rgb(112, 95, 236, 1);
+}
+
+.form_login_google_btn:hover {
+	cursor: pointer;
+}
+
+.form_signup_btn:hover {
+	cursor: pointer;
 }
 
 .form_login_google_btn {
