--- a/UniMeet/public/styles/register.css
+++ b/UniMeet/public/styles/register.css
@@ -72,6 +72,10 @@ body {
 	
 }
 
+.form_field:focus {
+	-webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25); 
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+}
 
 .form_login_btn {
 	width: 70%;
@@ -110,7 +114,7 @@ body {
 	font-size: 16px;
 }
 
-.form_login_google_btn:active {
+.form_login_google_btn:hover {
 	cursor: pointer;
 }
 
