--- a/UniMeet/public/styles/matching.css
+++ b/UniMeet/public/styles/matching.css
@@ -85,7 +85,7 @@
 	font-size: 16px;
 	float: right;
 	-webkit-transition-duration: 0.2s; /* Safari */
-    transition-duration: 0.2s;
+	transition-duration: 0.2s;
 }
 
 .refresh_button:hover {
@@ -107,13 +107,12 @@
 	background: #dddddd;
 	cursor: default;
 	-webkit-transition-duration: 0.2s; /* Safari */
-    transition-duration: 0.2s;
+	transition-duration: 0.2s;
 }
 
-
-
-
-
-
-
-
+footer {
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+}
