--- a/UniMeet/public/styles/matching.css
+++ b/UniMeet/public/styles/matching.css
@@ -1,17 +1,21 @@
 @charset "UTF-8";
 /* CSS Document */
-
+.body {
+}
 .mainView {
-	margin-left: 20vw;
-	margin-right: 4vw;
+	margin-left: 10vw;
+	margin-right: 10vw;
+	background-position: 0% 0%;
 }
 
+/*
 .navBar {
 	position: fixed;
 	height: 100vh;
 	width: 16vw;
 	background-color: rgba(123,109,238,1);
 }
+*/
 
 .headerText {
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
