--- a/UniMeet/public/styles/navigation.css
+++ b/UniMeet/public/styles/navigation.css
@@ -2,14 +2,15 @@
 /* CSS Document */
 
 .navigationBar {
-    position: fixed;
-    width: 100vw;
-    height: 70px;
-    background-color: rgba(123, 109, 238, 1);
-    min-width: 0px;
-    margin-top: 0px;
-    -webkit-box-shadow: 0px 1px 1px rgba(164,164,164,1.00);
-    box-shadow: 0px 1px 1px rgba(164,164,164,1.00);
+	position: fixed;
+	width: 100vw;
+	height: 64px;
+	background-color: #252742;
+	min-width: 0px;
+	margin-top: 0px;
+	z-index: 100;
+/*	-webkit-box-shadow: 0px 1px 1px rgba(164,164,164,1.00);*/
+/*	box-shadow: 0px 1px 1px rgba(164,164,164,1.00);*/
 }
 
 .nav_profile:hover {
@@ -46,16 +47,16 @@
 }
 
 .menuItems {
-    margin-top: 27px;
-    margin-right: 27px;
-    margin-left: 27px;
-    margin-bottom: 27px;
-    font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: normal;
-    font-size: 13px;
-    float: right;
-    color: rgba(255,255,255,1.00);
-    text-decoration: none;
+	margin-top: 23px;
+	margin-right: 23px;
+	margin-left: 23px;
+	margin-bottom: 23px;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: normal;
+	font-size: 13px;
+	float: right;
+	color: rgba(255,255,255,1.00);
+	text-decoration: none;
 }
 
 a {
