--- a/UniMeet/public/styles/matching.css
+++ b/UniMeet/public/styles/matching.css
@@ -1,11 +1,14 @@
 @charset "UTF-8";
 /* CSS Document */
 .body {
+     background-color: #f3f5f6;
 }
 .mainView {
+/*
 	margin-left: 10vw;
 	margin-right: 10vw;
 	background-position: 0% 0%;
+*/
 }
 
 /*
@@ -18,31 +21,31 @@
 */
 
 .headerText {
-	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-weight: bold;
+    font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    margin-top: 60px;
+    width: 250px;
 }
 
 .matched_profile_card {
-	background-color: #FFFFFF;
-	border-radius: 32px;
-	width: 100%;
-	-webkit-box-shadow: 0px 0px 32px rgba(0,0,0,0.20);
-	box-shadow: 0px 0px 32px rgba(0,0,0,0.20);
-	padding: 32px;
-	margin: 0px 0px 32px 0px;
-	float: left;
-	transition: 0.5s;
+    border-radius: 32px;
+    background-color:white;
+    border: 5px solid #f3f5f6;
+    width: 100%;
+    padding: 32px;
+    margin: 0px 0px 32px 0px;
+    float: left;
+    transition: 0.5s;
 }
 
 .matched_profile_card:hover {
-	-webkit-box-shadow: 0px 0px 32px rgba(0,0,0,0.20);
-	box-shadow: 0px 0px 32px rgba(123,109,238,1);
 	cursor: pointer;
+    border: 5px solid #E0E0E0;
 }
 
 .profile_image {
 	width: 50%;
-	border-radius: 50%;
+	border-radius: 32px;
 }
 
 .profile_name_title {
@@ -54,7 +57,7 @@
 }
 
 .profile_degree_title {
-	color: rgba(123,109,238,1);
+	color: #ff0084;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: normal;
 	font-size: 20px;
@@ -78,18 +81,22 @@
 }
 
 .refresh_button {
-	margin: 0px 15% 16px 15%;
-	padding: 10px 20px;
-	border-radius: 21px;
-	background-color: rgba(123,109,238,1);
-	border: 0px solid transparent;
-	color: white;
-	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-weight: normal;
-	font-size: 16px;
-	float: right;
-	-webkit-transition-duration: 0.2s; /* Safari */
-	transition-duration: 0.2s;
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    background-color: #ff0084;
+    border: 0px solid transparent;
+    color: white;
+    font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    float: left;
+    -webkit-transition-duration: 0.2s; /* Safari */
+    border-radius: 32px;
+    transition-duration: 0.2s;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .refresh_button:hover {
@@ -108,10 +115,10 @@
 }
 
 .refresh_button:disabled {
-	background: #dddddd;
-	cursor: default;
-	-webkit-transition-duration: 0.2s; /* Safari */
-	transition-duration: 0.2s;
+    background: #dddddd;
+    cursor: default;
+    -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
 }
 
 footer {
