--- a/UniMeet/public/styles/navigation.css
+++ b/UniMeet/public/styles/navigation.css
@@ -5,7 +5,7 @@
 	position: fixed;
 	width: 100vw;
 	height: 64px;
-	background-color: #252742;
+	background-color: #212124;
 	min-width: 0px;
 	margin-top: 0px;
 	z-index: 100;
@@ -13,8 +13,24 @@
 /*	box-shadow: 0px 1px 1px rgba(164,164,164,1.00);*/
 }
 
-.nav_profile:hover {
-   cursor: pointer;
+.logoPos {
+    margin-top: 7px;
+    margin-right: 135px;
+    margin-left: 135px;
+    margin-bottom: 7px;
+    float: left;
+    width: 50px;
+    height: 50px;
+}
+
+a:hover {
+    cursor: pointer;
+    border-bottom: medium inset #FFFFFF;
+}
+
+a:active {
+    cursor: pointer;
+    border-bottom: medium inset #FFFFFF;
 }
 
 .nav_profile_image {
@@ -47,16 +63,16 @@
 }
 
 .menuItems {
-	margin-top: 23px;
-	margin-right: 23px;
-	margin-left: 23px;
-	margin-bottom: 23px;
-	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-weight: normal;
-	font-size: 13px;
-	float: right;
-	color: rgba(255,255,255,1.00);
-	text-decoration: none;
+    margin-top: 23px;
+    margin-right: 23px;
+    margin-left: 23px;
+    margin-bottom: 23px;
+    font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: normal;
+    font-size: 13px;
+    float: right;
+    color: rgba(255,255,255,1.00);
+    text-decoration: none;
 }
 
 a {
