--- a/UniMeet/public/styles/matching.css
+++ b/UniMeet/public/styles/matching.css
@@ -57,7 +57,7 @@
 }
 
 .profile_degree_title {
-	color: #ff0084;
+	color: #40a4c4;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: normal;
 	font-size: 20px;
@@ -85,7 +85,7 @@
     padding-right: 20px;
     padding-left: 20px;
     padding-bottom: 10px;
-    background-color: #ff0084;
+    background-color: #40a4c4;
     border: 0px solid transparent;
     color: white;
     font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
