--- a/UniMeet/public/styles/user_messaging.css
+++ b/UniMeet/public/styles/user_messaging.css
@@ -10,7 +10,7 @@
 	position: fixed;
 	height: 100vh;
 	width: 16vw;
-	background-color: rgba(123,109,238,1);
+	background-color: #1EA1F2;
 }
 
 .messagesView {
