--- a/UniMeet/public/styles/main.css
+++ b/UniMeet/public/styles/main.css
@@ -33,7 +33,7 @@ body {
 }
 
 .primaryColour {
-	color: #40a4c4;
+	color: #1EA1F2;
 }
 
 .lightTextColour {
@@ -58,11 +58,11 @@ body {
 
 .purpleBackground {
 	color: white;
-	background-color: #40a4c4;
+	background-color: #1EA1F2;
 }
 
 .whiteBackground {
-	color: #40a4c4;
+	color: #1EA1F2;
 	background-color: white;
 }
 
