--- a/UniMeet/public/styles/matching.css
+++ b/UniMeet/public/styles/matching.css
@@ -16,7 +16,7 @@
 	position: fixed;
 	height: 100vh;
 	width: 16vw;
-	background-color: rgba(123,109,238,1);
+	background-color: #1EA1F2;
 }
 */
 
@@ -57,7 +57,7 @@
 }
 
 .profile_degree_title {
-	color: #40a4c4;
+	color: #1EA1F2;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: normal;
 	font-size: 20px;
@@ -85,7 +85,7 @@
     padding-right: 20px;
     padding-left: 20px;
     padding-bottom: 10px;
-    background-color: #40a4c4;
+    background-color: #1EA1F2;
     border: 0px solid transparent;
     color: white;
     font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
