--- a/UniMeet/public/styles/navigation.css
+++ b/UniMeet/public/styles/navigation.css
@@ -2,23 +2,25 @@
 /* CSS Document */
 
 .navigationBar {
-	position: fixed;
-	width: 100vw;
-	height: 64px;
-	background-color: #212124;
-	min-width: 0px;
-	margin-top: 0px;
-	z-index: 100;
-/*	-webkit-box-shadow: 0px 1px 1px rgba(164,164,164,1.00);*/
-/*	box-shadow: 0px 1px 1px rgba(164,164,164,1.00);*/
+    position: fixed;
+    width: 100vw;
+    height: 64px;
+    background-color: #fff;
+    min-width: 0px;
+    margin-top: 0px;
+    z-index: 100;
+    -webkit-box-shadow: 0px 1px 3px rgba(75,75,75,0.25);
+    box-shadow: 0px 1px 3px rgba(75,75,75,0.25);
 }
 
 .logoPos {
-    margin-top: 7px;
-    margin-right: 135px;
-    margin-left: 135px;
-    margin-bottom: 7px;
+    
     float: left;
+    position: relative;
+    left: 10%;
+    margin-top: 7px;
+    margin-left: 40%;
+    margin-bottom: 7px;
     width: 50px;
     height: 50px;
 }
@@ -71,13 +73,13 @@ a:active {
     font-weight: normal;
     font-size: 13px;
     float: right;
-    color: rgba(255,255,255,1.00);
+    color: #66757f;
     text-decoration: none;
 }
 
 a {
     display: inline;
-    color: rgba(255,255,255,1.00);
+    color: #66757f;
     text-decoration: none;
     margin-left: 12px;
     margin-top: 12px;
