--- a/UniMeet/public/styles/register.css
+++ b/UniMeet/public/styles/register.css
@@ -26,7 +26,7 @@ body {
 .view_panel {
 	width: 40%;
 	height: 100vh;
-	background-color: rgba(123,109,238,1);
+	background-color: #1EA1F2;
 	float: right;
 }
 
@@ -92,13 +92,13 @@ body {
 
 .form_login_btn:hover {
 	cursor: pointer;
-	background-color: rgb(118, 102, 237, 1);
+	background-color: rgba(118, 102, 237, 1);
 }
 
 .form_login_btn:active {
   	background:#eb3b60;
   	transform:translateY(1px);
-  	background-color: rgb(112, 95, 236, 1);
+  	background-color: rgba(112, 95, 236, 1);
 }
 
 
@@ -108,7 +108,7 @@ body {
 	margin: 0px 20%;
 	background-color: transparent;
 	border: 0px solid transparent;
-	color: rgba(123,109,238,1);
+	color: #1EA1F2;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: normal;
 	font-size: 16px;
