--- a/UniMeet/public/styles/register.css
+++ b/UniMeet/public/styles/register.css
@@ -5,6 +5,22 @@ body {
 	margin: 0px;
 }
 
+.loginLogo{
+    float: left;
+    position: relative;
+    width: 50px;
+    height: 50px;
+    margin-top: -7%;
+    padding-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+    margin-bottom: -7%;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+
 .signup_panel {
 	position: relative;
 	width: 60%;
@@ -82,7 +98,7 @@ body {
 	height: 42px;
 	margin: 0px 15% 16px 15%;
 	border-radius: 21px;
-	background-color: rgba(123, 109, 238, 1);
+	background-color: #1EA1F2;
 	border: 0px solid transparent;
 	color: white;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -92,13 +108,13 @@ body {
 
 .form_login_btn:hover {
 	cursor: pointer;
-	background-color: rgba(118, 102, 237, 1);
+	background-color: #016DBF;
 }
 
 .form_login_btn:active {
   	background:#eb3b60;
   	transform:translateY(1px);
-  	background-color: rgba(112, 95, 236, 1);
+  	background-color: #016DBF;
 }
 
 
@@ -140,19 +156,3 @@ body {
 	width: 50%;
 	float: left;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
