--- a/UniMeet/public/styles/navigation.css
+++ b/UniMeet/public/styles/navigation.css
@@ -17,9 +17,8 @@
     
     float: left;
     position: relative;
-    left: 10%;
     margin-top: 7px;
-    margin-left: 40%;
+    margin-left: 10vw;
     margin-bottom: 7px;
     width: 50px;
     height: 50px;
@@ -66,7 +65,7 @@ a:active {
 
 .menuItems {
     margin-top: 23px;
-    margin-right: 23px;
+    margin-right: 10vw;
     margin-left: 23px;
     margin-bottom: 23px;
     font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
