--- a/UniMeet/public/styles/user_profile.css
+++ b/UniMeet/public/styles/user_profile.css
@@ -20,8 +20,8 @@
 	position: absolute;
 /*	background: url(/../images/purple_profile_placeholder.png);*/
 	background-position: 50% 50%;
-	height: 200px;
-	width: 200px;
+	height: 280px;
+	width: 280px;
 	background-size: cover;
 	border-radius: 32px;
 	left: 10vw;
@@ -41,7 +41,7 @@
 	width: 100%;
 	height: 64px;
 	padding: 0px 16px;
-	padding-left: calc(10vw + 186px + 6vw);
+	padding-left: calc(10vw + 266px + 6vw);
 	background-color: white;
 	vertical-align: middle;
 	float: right;
@@ -60,7 +60,7 @@
 
 .shortcut_buttons:hover {
     cursor: pointer;
-    border-bottom: medium inset #1EA1F2;
+    border-bottom: medium solid #1EA1F2;
 }
 
 .shortcut_buttons:active {
@@ -79,12 +79,12 @@
 
 
 .bioView {
-	width: 200px;
+	width: 280px;
 	float: left;
 }
 
 .infoView {
-	width: calc(100% - (200px + 6vw));
+	width: calc(100% - (280px + 6vw));
 	margin-left: 6vw;
 	float: right;
 }
@@ -174,7 +174,7 @@
 
 .star-rating label {
     color: #bbb;
-    font-size: 18px;
+    font-size: 24px;
     padding: 0px;
     cursor: pointer;
     -webkit-transition: all .3s ease-in-out;
@@ -199,7 +199,7 @@
 
 .star-average label {
     color: #bbb;
-    font-size: 18px;
+    font-size: 24px;
     padding: 0px;
 }
 
