--- a/UniMeet/public/styles/setup.css
+++ b/UniMeet/public/styles/setup.css
@@ -6,28 +6,106 @@
 }
 
 body {
-	background-color: #f1f1f1;
+	background-color: #1EA1F2;
+}
+
+
+.header_image {
+	width: 100%;
+    height: 100%;
+	opacity: 0.2;
+    background-image: url('../images/background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+.image_panel {
+	width: 40%;
+	height: 100vh;
+	background-color: #1EA1F2;
+	float: right;
+}
+
+
+.view_panel {
+	position: relative;
+	width: 60%;
+	height: 100vh;
+	background-color: white;
+	float: left;
 }
 
 #regForm {
-	background-color: #ffffff;
-	margin: 100px auto;
+/*	background-color: #ffffff;*/
+/*	margin: 0px auto;*/
+/*
+	height: 100vh;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	padding: 40px;
 	width: 70%;
 	min-width: 300px;
+*/
+/*	border-radius: 32px;*/
+	margin: 0px 15%;
+width: 70%;
+	position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.loginLogo{
+    float: left;
+    position: relative;
+    width: 50px;
+    height: 50px;
+    margin-top: -7%;
+    padding-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+    margin-bottom: -7%;
+}
+
+.sml_title {
+	width: 70%;
+    margin-bottom: 8px;
+	text-align: left;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: bold;
+	font-size: 16px;
 }
 
 h1 {
-	text-align: center;  
+	width: 100%;
+    margin-bottom: 16px;
+	text-align: left;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: normal;
+	font-size: 36px;
 }
 
+
 input {
+/*
 	padding: 10px;
 	width: 100%;
 	font-size: 17px;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	border: 1px solid #aaaaaa;
+*/
+	
+	width: 100%;
+	height: 42px;
+    padding: 12px 16px;
+    box-sizing: border-box;
+	border-radius: 21px;
+	border: 2px solid rgba(200,200,200,1.00);
+	
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: normal;
+	font-size: 16px;
+	
 }
 
 /* Mark input boxes that gets an error on validation: */
@@ -36,11 +114,26 @@ input.invalid {
 }
 
 select {
+/*
 	padding: 10px;
 	width: 100%;
 	font-size: 17px;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	border: 1px solid #aaaaaa;
+*/
+	
+	width: 100%;
+	height: 42px;
+    padding: 12px 16px;
+    box-sizing: border-box;
+	border-radius: 21px;
+	border: 2px solid rgba(200,200,200,1.00);
+	background-color: white;
+	
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: normal;
+	font-size: 16px;
+	
 }
 
 /* Hide all steps by default: */
@@ -49,17 +142,32 @@ select {
 }
 
 button {
+/*
 	background-color: #4CAF50;
 	color: #ffffff;
 	border: none;
 	padding: 10px 20px;
 	font-size: 17px;
 	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+*/
 	cursor: pointer;
+	
+/*	width: 70%;*/
+	height: 42px;
+	margin-left: 16px;
+	padding: 8px 32px;
+	border-radius: 21px;
+	background-color: #1EA1F2;
+	border: 0px solid transparent;
+	color: white;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: normal;
+	font-size: 16px;
 }
 
 button:hover {
-	opacity: 0.8;
+/*	cursor: pointer;*/
+	background-color: #016DBF;
 }
 
 #prevBtn {
@@ -68,12 +176,12 @@ button:hover {
 
 /* Make circles that indicate the steps of the form: */
 .step {
-	height: 15px;
-	width: 15px;
+	height: 4px;
+	width: 32px;
 	margin: 0 2px;
 	background-color: #bbbbbb;
 	border: none;  
-	border-radius: 50%;
+	border-radius: 2px;
 	display: inline-block;
 	opacity: 0.5;
 }
@@ -84,5 +192,5 @@ button:hover {
 
 /* Mark the steps that are finished and valid: */
 .step.finish {
-	background-color: #4CAF50;
+	background-color: #1EA1F2;
 }
