Fixed more button problems, cleaned up and removed obsolete functions, added some CSS for button clicks

--- a/UniMeet/public/styles/user_profile.css
+++ b/UniMeet/public/styles/user_profile.css
@@ -66,6 +66,13 @@
 .shortcut_buttons:active {
     cursor: pointer;
     border-bottom: medium inset #1EA1F2;
+    transform:translateY(1px);
+}
+
+.shortcut_buttons:disabled {
+    cursor: default;
+    border-bottom: none;
+    transform:translateY(1px);
 }
 
 
