--- a/UniMeet/public/styles/navigation.css
+++ b/UniMeet/public/styles/navigation.css
@@ -35,13 +35,9 @@ a:active {
 }
 
 .nav_profile_image {
-	display:  block;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 58px;
-	width: 50%;
+	height: 36px;
+	width: 36px;
 	border-radius: 50%;
-	cursor: pointer;
 }
 
 .nav_profile_title {
@@ -64,10 +60,18 @@ a:active {
 }
 
 .menuItems {
+/*
     margin-top: 23px;
     margin-right: 10vw;
     margin-left: 23px;
     margin-bottom: 23px;
+*/
+	position: absolute;
+	right: 10vw;
+	top: 50%;
+	webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+	
     font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: normal;
     font-size: 13px;
@@ -80,10 +84,13 @@ a {
     display: inline;
     color: #66757f;
     text-decoration: none;
+	padding-left: 24px;
+/*
     margin-left: 12px;
     margin-top: 12px;
     margin-right: 12px;
     margin-bottom: 12px;
+*/
     text-transform: uppercase;
 }
     
