--- a/UniMeet/public/styles/register.css
+++ b/UniMeet/public/styles/register.css
@@ -111,12 +111,11 @@ body {
 	background-color: #016DBF;
 }
 
-.form_login_btn:active {
+.form_login_btn:active, .form_login_btn.active {
   	background:#eb3b60;
   	transform:translateY(1px);
   	background-color: #016DBF;
 }
-
 
 .form_login_google_btn {
 	width: 60%;
