--- a/UniMeet/public/styles/edit_profile.css
+++ b/UniMeet/public/styles/edit_profile.css
@@ -131,6 +131,45 @@
 
 
 
+.profile_card {
+	width: 100%;
+	height: 80px;
+	background-color: white;
+	margin-bottom: 8px;
+	border-radius: 16px;
+	position: relative;
+}
+
+.blockedImage {
+	position: absolute;
+	width: 64px;
+	height: 64px;
+	left: 8px;
+	top: 8px;
+	border-radius: 8px;
+	background: url(../images/profile_placeholder.png) no-repeat center center;
+	background-size: cover;
+}
+
+.blockedName {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 96px;
+}
+
+.unblockBtn {
+	position: absolute;
+	right: 8px;
+	height: 100%;
+	margin: 0px;
+}
+
+
+
+
+
+
 
 
 
