--- a/UniMeet/public/styles/messaging.css
+++ b/UniMeet/public/styles/messaging.css
@@ -16,6 +16,8 @@
 	width: 80%;
 	height: 100%;
 	float: right;
+	overflow-x: hidden;
+  	overflow-y: visible;
 /*	background-color: red;*/
 }
 
@@ -34,7 +36,7 @@
 	width: 100%;
 	position: relative;
 	border-bottom: 1px solid rgba(0,0,0,0.1);
-	transition: .5s;
+	transition: .4s;
 }
 
 .userCellActive {
@@ -44,7 +46,7 @@
 	width: 100%;
 	position: relative;
 	border-bottom: 1px solid rgba(0,0,0,0.1);
-	transition: .5s;
+	transition: .4s;
 }
 
 .userCell:hover {
