CSS edits, change profile image while editing, directly accept or block users from the edit profile page.

--- a/UniMeet/public/styles/edit_profile.css
+++ b/UniMeet/public/styles/edit_profile.css
@@ -47,7 +47,17 @@
 
 
 
+.headerSave {
+	position: relative;
+	padding-bottom: 8px;
+}
 
+.saveBtn {
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	
+}
 
 
 
